--- a/_posts/blog/2013-06-17-prism.md
+++ b/_posts/blog/2013-06-17-prism.md
@@ -1,6 +1,8 @@
 --- 
 title:          Fears confirmed&#58; PIM after PRISM 
-categories:     [Linux & Open Source]
+categories:     
+- Linux & Open Source
+- blog
 type:           post
 layout:         post
 img:            /img/posts/2013/prism.jpg
