--- a/_posts/blog/2013-08-02-island.md
+++ b/_posts/blog/2013-08-02-island.md
@@ -1,6 +1,8 @@
 --- 
 title:          Iceland Vacation 2013 
-categories:     [Personal, Photos]
+categories:     
+- Personal
+- blog
 type:           post
 layout:         post
 img:            /img/posts/2013/iceland_icelake.jpg
