--- a/_posts/blog/2013-11-19-r-travis.md
+++ b/_posts/blog/2013-11-19-r-travis.md
@@ -1,6 +1,9 @@
 --- 
 title:          Continuous Integration of R packages
-categories:     [R, Jaatha]
+categories:     
+- R
+- Jaatha
+- blog
 type:           post
 layout:         post
 img:            /img/posts/2013/r.svg
