--- a/_posts/blog/2013-12-12-ssl.md
+++ b/_posts/blog/2013-12-12-ssl.md
@@ -2,7 +2,9 @@
 layout:      post
 title:       My blog now supports https
 modified:    2013-12-12
-categories:  [Personal]
+categories:  
+- Personal
+- blog
 tags:        [blog, ssl, https]
 image:
   feature: 
