--- a/_posts/blog/2014-01-11-check-ssl.md
+++ b/_posts/blog/2014-01-11-check-ssl.md
@@ -3,7 +3,9 @@ layout:      post
 title:       "How is my SSL?"
 description: "An easy way to check your SSL/TLS security"
 modified:    2014-01-11
-categories:  [Linux & Open Source]
+categories:  
+- Linux & Open Source
+- blog
 tags:        [Security, tls, firefox]
 image:
   feature: 
