--- a/_posts/blog/2013-11-20-r-shm.md
+++ b/_posts/blog/2013-11-20-r-shm.md
@@ -1,6 +1,8 @@
 --- 
 title:          Speedup R by moving temporary files into memory
-categories:     [R]
+categories:     
+- R
+- blog
 type:           post
 layout:         post
 img:            /img/posts/2013/r.svg
