change project picture

--- a/_posts/project/2012-01-01-jaatha.md
+++ b/_posts/project/2012-01-01-jaatha.md
@@ -5,12 +5,9 @@ date: 2012-01-01 16:54:46
 author: Paul
 categories:
 - project
-img: portfolio_10.jpg
-thumb: thumb02.jpg
-carousel:
-- single01.jpg
-- single02.jpg
-- single03.jpg
+img: jaatha.png
+thumb:
+carousel: 
 website: http://evol.bio.lmu.de/_statgen/software/jaatha
 ---
 
