--- a/_posts/project/2012-01-01-jaatha.md
+++ b/_posts/project/2012-01-01-jaatha.md
@@ -4,9 +4,12 @@ title: "Jaatha"
 author: Paul
 categories:
 - project
+languages:
+- R
+- C++
 tags:
 - Simulation based analysis
-- R
+- CRAN
 - Rcpp
 img: jaatha.png
 thumb:
