add more project metadata

--- a/_posts/project/2012-01-01-jaatha.md
+++ b/_posts/project/2012-01-01-jaatha.md
@@ -4,13 +4,13 @@ title: "Jaatha"
 author: Paul
 categories:
 - project
-date: since 01/2012
+type: Simulation-based Analysis 
+time: since 01/2012
 languages:
 - R
 - C++
 tags:
-- Simulation based analysis
-- CRAN
+- Population Genetics
 - Rcpp
 img: jaatha.png
 thumb:
