--- a/_posts/project/2012-01-01-jaatha.md
+++ b/_posts/project/2012-01-01-jaatha.md
@@ -4,14 +4,19 @@ title: "Jaatha"
 author: Paul
 categories:
 - project
-type: Simulation-based Analysis 
+type: Simulation-based Data Analysis 
 time: since 01/2012
 languages:
 - R
 - C++
 tags:
+- Simulation
+- Data Analysis
 - Population Genetics
+- Demographic Inference
+- CRAN Package
 - Rcpp
+- Genomic Data
 img: jaatha.png
 thumb:
 carousel: 
