add logo to sidebar

--- a/_posts/project/2012-01-01-jaatha.md
+++ b/_posts/project/2012-01-01-jaatha.md
@@ -19,7 +19,7 @@ tags:
 - Genomic Data
 img: jaatha.png
 thumb:
-carousel: 
+carousel: jaatha.png
 website: http://evol.bio.lmu.de/_statgen/software/jaatha
 ---
 
