fix post images

--- a/_posts/blog/2013-06-17-prism.md
+++ b/_posts/blog/2013-06-17-prism.md
@@ -5,10 +5,7 @@ categories:
 - blog
 type:           post
 layout:         post
-img:            /img/posts/2013/prism.jpg
-img-desc:       Dollar note with prism effect 
-img-copyright:  Part of [an image](https://secure.flickr.com/photos/cyberaxe/8999692832) under CC-BY-2.0 Licence
-                by [thibault milan](https://secure.flickr.com/photos/cyberaxe/).
+img:
 ---
 
 The [third post](http://paulstaab.de/2010/02/alternativen-zu-google) 
