--- a/_posts/blog/2013-11-20-r-shm.md
+++ b/_posts/blog/2013-11-20-r-shm.md
@@ -5,10 +5,7 @@ categories:
 - blog
 type:           post
 layout:         post
-img:            /img/posts/2013/r.svg
-img-desc:       An R, plotted in R
-img-copyright:  CC0 by me (actually I do not think it is innovative enough to
-                be copyrighted at all..).
+img:            
 ---
 
 There are certain situations when you need to work with temporary files in R.
