--- a/_posts/blog/2013-11-19-r-travis.md
+++ b/_posts/blog/2013-11-19-r-travis.md
@@ -6,10 +6,7 @@ categories:
 - blog
 type:           post
 layout:         post
-img:            /img/posts/2013/r.svg
-img-desc:       An R, plotted in R
-img-copyright:  CC0 by me (actually I do not think it is innovative enough to
-                be copyrighted at all..).
+img:            
 ---
 
 I started playing with 
