add download to repo

--- a/_posts/publications/2015-01-08-scrm.md
+++ b/_posts/publications/2015-01-08-scrm.md
@@ -5,6 +5,6 @@ title:      "scrm: efficiently simulating long sequences using the approximated 
 author:     "Paul R. Staab, Sha Zhu, Dirk Metzler, and Gerton Lunter"
 journal:    "Bioinformatics"
 url_web:    http://bioinformatics.oxfordjournals.org/content/early/2015/01/13/bioinformatics.btu861.full
-url_pdf:    http://bioinformatics.oxfordjournals.org/content/early/2015/01/13/bioinformatics.btu861.full.pdf+html
+url_pdf:    /dl/scrm_2015.pdf
 ---
 
