--- a/_posts/publications/2013-09-13-jaatha-2.md
+++ b/_posts/publications/2013-09-13-jaatha-2.md
@@ -6,6 +6,6 @@ date:       2013-09-13
 author:     "Lisha A. Mathew, Paul R. Staab, Laure E. Rose, and Dirk Metzler"
 journal:    "Ecology and Evolution (2013)"
 url_web:   http://onlinelibrary.wiley.com/doi/10.1002/ece3.722/abstract
-url_pdf:   https://www.paulstaab.de/dl/science/mathew_2013.pdf
+url_pdf:   /dl/jaatha_2013.pdf
 ---
 
