fix broken links

--- a/_posts/blog/2013-06-17-prism.md
+++ b/_posts/blog/2013-06-17-prism.md
@@ -8,7 +8,7 @@ layout:         post
 img:
 ---
 
-The [third post](http://paulstaab.de/2010/02/alternativen-zu-google) 
+The [third post](/2010/alternativen-zu-google) 
 in my blog here back in 2010 was about my search for alternatives to the popular
 Google groupware (GMail, GCal, Google Contacts etc) that I used to manage my
 personal information at that time. These plans were
