add author information

--- a/_posts/blog/2013-11-19-r-travis.md
+++ b/_posts/blog/2013-11-19-r-travis.md
@@ -1,8 +1,8 @@
 --- 
 title:          Continuous Integration of R packages
+author: Paul
 categories:     
 - R
-- Jaatha
 - blog
 type:           post
 layout:         post
