add scrm journal issue

--- a/_posts/publications/2015-01-08-scrm.md
+++ b/_posts/publications/2015-01-08-scrm.md
@@ -3,7 +3,7 @@ layout:     post
 categories: publication
 title:      "scrm: efficiently simulating long sequences using the approximated coalescent with recombination"
 author:     "Paul R. Staab, Sha Zhu, Dirk Metzler, and Gerton Lunter"
-journal:    "Bioinformatics"
+journal:    "Bioinformatics 31 (10), 1680-1682" 
 url_web:    http://bioinformatics.oxfordjournals.org/content/early/2015/01/13/bioinformatics.btu861.full
 url_pdf:    /dl/scrm_2015.pdf
 ---
