draft project page

--- a/_posts/projects/2014-02-23-coala.md
+++ b/_posts/projects/2014-02-23-coala.md
@@ -1,26 +1,15 @@
 ---
 layout: project
-title: "Jaatha"
-author: Paul
-categories:
-- project
-type: Simulation-based Data Analysis 
-time: since 01/2012
-languages:
+title: "coala"
+description: "An R framework for coalescent simulation"
+role: "Main Developer"
+categories: projects
+type: R Package
+languages: 
 - R
 - C++
-tags:
-- Simulation
-- Data Analysis
-- Population Genetics
-- Demographic Inference
-- CRAN Package
-- Rcpp
-- Genomic Data
-img: jaatha.png
-thumb:
-carousel: jaatha.png
-website: http://evol.bio.lmu.de/_statgen/software/jaatha
+github: statgenlmu/coala
+url: https://cran.r-project.org/web/packages/coala
 ---
 
 #### YOUR PROJECT NAME
