add project publications

--- a/_publications/2013-09-13-jaatha-2.md
+++ b/_publications/2013-09-13-jaatha-2.md
@@ -1,6 +1,7 @@
 ---
 layout:     post
 categories: publication
+project:    "Jaatha"
 title:      "Why to account for finite sites in population genetic studies and how to do this with Jaatha 2.0"
 date:       2013-09-13
 author:     "Lisha A. Mathew, Paul R. Staab, Laure E. Rose, and Dirk Metzler"
