--- a/_publications/2015-01-08-scrm.md
+++ b/_publications/2015-01-08-scrm.md
@@ -1,6 +1,7 @@
 ---
 layout:     post
 categories: publication
+project:    scrm
 title:      "scrm: efficiently simulating long sequences using the approximated coalescent with recombination"
 author:     "Paul R. Staab, Sha Zhu, Dirk Metzler, and Gerton Lunter"
 journal:    "Bioinformatics 31 (10), 1680-1682" 
