--- a/_publications/2015-11-16-coala.md
+++ b/_publications/2015-11-16-coala.md
@@ -1,6 +1,7 @@
 ---
 layout:     post
 categories: publication
+project:    coala
 title:      "coala: An R framework for coalescent simulation"
 author:     "Paul R. Staab and Dirk Metzler"
 journal:    "Submitted to Bioinformatics"
