--- a/_publications/2016-01-18-thesis.md
+++ b/_publications/2016-01-18-thesis.md
@@ -1,6 +1,7 @@
 ---
 layout:     post
 categories: publication
+project:    "Jaatha"
 title:      "Co-estimation of Demography and Positive Selection"
 author:     "Paul R. Staab"
 journal:    "PhD Thesis (submitted)"
