fix coala paper metadata

--- a/_publications/2016-02-18-coala.md
+++ b/_publications/2016-02-18-coala.md
@@ -4,7 +4,7 @@ categories: publication
 project:    coala
 title:      "Coala: An R framework for coalescent simulation"
 author:     "Paul R. Staab and Dirk Metzler"
-journal:    "Bioinformatics (2016) doi: 10.1093/bioinformatics/btw098"
+journal:    "Bioinformatics (2016)"
 url_web:    http://bioinformatics.oxfordjournals.org/content/early/2016/02/18/bioinformatics.btw098.abstract
 url_pdf:    
 ---
