update thesis status

--- a/_publications/2016-01-18-thesis.md
+++ b/_publications/2016-01-18-thesis.md
@@ -4,7 +4,7 @@ categories: publication
 project:    "Jaatha"
 title:      "Co-estimation of Demography and Positive Selection"
 author:     "Paul R. Staab"
-journal:    "PhD Thesis (submitted)"
+journal:    "PhD Thesis"
 url_web:
 url_pdf:
 ---
