Remove broken links

--- a/_posts/2013-06-17-prism.md
+++ b/_posts/2013-06-17-prism.md
@@ -9,7 +9,7 @@ layout:         post
 img:
 ---
 
-The [third post](/2010/alternativen-zu-google) 
+The third post 
 in my blog here back in 2010 was about my search for alternatives to the popular
 Google groupware (GMail, GCal, Google Contacts etc) that I used to manage my
 personal information at that time. These plans were
@@ -51,7 +51,7 @@ finally abandon it. I'm still trying to get used to
 much harder to use than the Google Search. Guess this demonstrates that Google
 still knows me well. So the last pieces that keeps Google (and the NSA) well
 informed about myself are Google+ and my Android phone. The latter runs
-[Cyanogen Mod](http://www.cyanogenmod.com) anyway, so it
+Cyanogen Mod anyway, so it
 would be possible to operate it completely without Google. But this would require abandoning
 the Play Store as well, which is not an option for me in the moment. I will
 try to migrate slowly to Open Source Apps provided by
