Varios tweaks to old posts

--- a/_posts/2013-06-17-prism.md
+++ b/_posts/2013-06-17-prism.md
@@ -16,6 +16,7 @@ personal information at that time. These plans were
 motived by a vague feeling that Google might at some point start to misuse my
 personal data. The recent revelations about PRISM proved that this feeling was more
 than justified.
+<!--more-->
 
 Luckily I have slowly migrated away from Google's products to self hosted open source
 replacements. Today, I run my own little server at home, a
