--- a/_posts/2013-11-19-r-travis.md
+++ b/_posts/2013-11-19-r-travis.md
@@ -18,6 +18,7 @@ readme. I though quite a bit on how I could ensure that I cannot forget to run
 [Jaatha's](https://github.com/paulstaab/jaatha) integration tests, as
 they take much to long to be included in the package, and travis seems to be the
 perfect place for that. 
+<!--more-->
 
 You can also set up travis to push generated files back to github. I tried using
 this to automatically build up-to-date vignettes. Jaatha's vignettes however
