--- a/_posts/2013-11-20-r-shm.md
+++ b/_posts/2013-11-20-r-shm.md
@@ -14,6 +14,7 @@ For instance, my package Jaatha requires that an external simulation tool is
 called, which writes it's results into files. However, reading and writing to
 disk is really slow compared to data in memory, and hence the use of many
 temporary files can be a severe performance bottleneck. 
+<!--more-->
 
 However, there is an solution easy for this on (reasonably modern) Linux systems, at least in
 case the files fit into memory. There normally is a memory disk available under
