--- a/_posts/2013-06-17-prism.md
+++ b/_posts/2013-06-17-prism.md
@@ -2,8 +2,7 @@
 title:          Fears confirmed&#58; PIM after PRISM 
 author: Paul
 categories:     
-- Linux & Open Source
-- blog
+- Open Source
 type:           post
 layout:         post
 img:
